tests/ui/g-typed-route-duplicate-label-project.stderr
error[E0080]: evaluation panicked: route arms reuse the same label
 --> $RUST/core/src/panic.rs
  |
  = note: evaluation of `<hibana::g::Route<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<5, ()>>, hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<5, ()>>> as hibana::g::Choreography>::SOURCE` failed here
  |
 ::: src/g.rs
  |
  |             panic!("route arms reuse the same label");
  |             ----------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |         let source = <Steps as Choreography>::SOURCE.eff_list();
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g.rs
  |
  |     &ProjectedChoreography::<Steps>::PROGRAM_IMAGE
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |                 Self::STAMP,
  |                 ^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn hibana::global::role_program::program::project_choreography_role::<0, hibana::g::Route<hibana::g::Send<Role<0>, Role<0>, Msg<5, ()>>, hibana::g::Send<Role<0>, Role<0>, Msg<5, ()>>>>`
 --> src/global/role_program/program.rs
  |
  |         project_choreography_role(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
